--- a/style/common.scss
+++ b/style/common.scss
@@ -1,7 +1,10 @@
 /* 全局公共scss */
 
+.mainArea{
+	background-color: #140C1C;
+}
 .mainBox{
-	
+	background-color: #140c1c;
 }
 .mainTop{
 	padding-top: 88rpx;
